--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.2",
     "aos": "^2.3.4",
     "firebase": "^10.5.0",
     "localforage": "^1.10.0",
@@ -22,7 +23,8 @@
     "react-star-ratings": "^2.3.0",
     "react-stars-rating": "^0.0.5",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.32"
+    "sweetalert2": "^11.7.32",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
