--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "react-spinners": "^0.13.8",
     "react-star-ratings": "^2.3.0",
     "react-stars-rating": "^0.0.5",
     "sort-by": "^1.2.0",
